Attempt at fixing PHP bug #76386

..that is also a duplicate of #67122